--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,12 +3,7 @@
 
 <div class="flex-container font-weight-bold bg-green text-white" id="footer">
     <div class="container py-5 text-center">
-        <p>Copyright &copy; Agro Fund One 2017-<span id="currentYear"></span>
-        </p>
-        <p class="mt-3 small">Icons made by
-            <a href="https://www.flaticon.com/authors/freepik" title="Freepik">Freepik</a>
-            from
-            <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a>
+        <p>Copyright &copy; <span id="currentYear"></span> by AeroFleetOne.
         </p>
     </div>
 </div>
