--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -3,7 +3,7 @@
 
 <nav class="navbar navbar-expand-md fixed-top">
     <a class="navbar-brand smooth-scroll" href="#top">
-        <img class="my-navbar-img" src="{{'/assets/img/logo-full.png' | relative_url }}?{{cache_buster}}" alt="{{site.title}}">
+        <img class="my-navbar-img" src="{{'/assets/img/Aero-Fleet-One-logo.png' | relative_url }}?{{cache_buster}}" alt="{{site.title}}">
     </a>
 
     <button aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler hamburger hamburger--spring d-md-none" data-target="#navbarNav" data-toggle="collapse" type="button">
@@ -16,16 +16,16 @@
         <ul class="navbar-nav ml-auto mr-2">
 
             {% for i in site.data.navigation.items %}
-                {% unless forloop.last %}
+                <!-- {% unless forloop.last %} -->
                     <li class="nav-item underline ml-2">
                         <a class="nav-link smooth-scroll" href="{{i.url}}">{{i.name}}</a>
                     </li>
-                {% endunless %}
+                <!-- {% endunless %} -->
             {% endfor %}
 
-            <li class="nav-item cta-btn ml-2">
+            <!-- <li class="nav-item cta-btn ml-2">
                 <a class="nav-link" data-target="#investModal" data-toggle="modal" href="">Invest</a>
-            </li>
+            </li> -->
         </ul>
     </div>
 </nav>
