--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -1,7 +1,7 @@
 ---
 ---
 
-$primary-color: #967274;
+$primary-color:#3D5975;
 $secondary-color: #6a9b7d;
 
 @import url('https://fonts.googleapis.com/css2?family=Anton&family=Lato:wght@400;700&display=swap');
@@ -23,6 +23,7 @@ h1 {
 h2 {
   margin-top: auto;
   margin-bottom: auto;
+  color: $primary-color;
 }
 
 .main {
@@ -193,35 +194,53 @@ background-color: #fff;
  /* Start video styles */
 
  #video {
-  max-height: 60vh;
-  overflow: hidden;
+  // max-height: 60vh;
+  // overflow: hidden;
+  height: auto;
+  width: 100%;
   position: relative;
+  // position: relative;
+  
 
   .bg-video {
     width: 100%;
     background: top center url({{'/assets/img/farm_bg.jpg'|relative_url}})
   }
 
-  .headline {
+  .style-k1i08bir {
     position: absolute;
-    top: 35%;
-    left: 50%;
-    transform: translate(-50%,-50%);
-    text-align: center;
-    text-shadow: 4px 4px 8px black;
-    width: 75% !important;
-    @media (max-width: 820px) {
-      width: 95% !important;
-    }
-
-    h1 {
-      font-size: 5rem;
-      @media (max-width: 820px) {
-        font-size: 1.5rem;
-      }
-    }
-  }
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    margin: auto;
 }
+
+
+  // .headline {
+  //   position: absolute;
+  //   top: 35%;
+  //   left: 50%;
+  //   transform: translate(-50%,-50%);
+  //   text-align: center;
+  //   text-shadow: 4px 4px 8px black;
+  //   width: 75% !important;
+  //   @media (max-width: 820px) {
+  //     width: 95% !important;
+  //   }
+
+  //   h1 {
+  //     font-size: 5rem;
+  //     @media (max-width: 820px) {
+  //       font-size: 1.5rem;
+  //     }
+  //   }
+  // }
+}
+
+
 
 
 /* opportunities  */
@@ -295,12 +314,27 @@ background-color: #fff;
 		box-shadow: 0 0 0 0 rgba(0, 0, 0, 0);
 	}
 }
+
+
+// timeline styles
+
+.timeline-gif {
+
+  img {
+    max-width: 100%;
+    height: auto;
+  }
+ 
+}
+
+
+
+
 /* team styles */
 
 .img-team {
   text-align: center;
   margin: auto;
-  border: 5px solid $secondary-color;
   width: 250px;
 }
 
@@ -343,5 +377,5 @@ background-color: #fff;
 }
 
 @import 'hamburger';
-@import 'flipcard';
+// @import 'flipcard';
 @import 'lightbox';
