Fix structure, cards, carousels, contact form, etc.

--- a/assets/css/_sass/_hamburger.scss
+++ b/assets/css/_sass/_hamburger.scss
@@ -27,7 +27,7 @@
     .hamburger.is-active .hamburger-inner,
     .hamburger.is-active .hamburger-inner::before,
     .hamburger.is-active .hamburger-inner::after {
-      background-color: #000; }
+      background-color: $primary-color; }
   
   .hamburger-box {
     width: 40px;
@@ -42,7 +42,7 @@
     .hamburger-inner, .hamburger-inner::before, .hamburger-inner::after {
       width: 40px;
       height: 4px;
-      background-color: #000;
+      background-color: $primary-color;
       border-radius: 4px;
       position: absolute;
       transition-property: transform;
