--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,9 +1,11 @@
 <!-- assign variable to invalidate cache upon each new build -->
 {% assign cache_buster = site.time | date: '%s%N' %}
 
-<div class="flex-container font-weight-bold bg-green text-white" id="footer">
+<div class="flex-container font-weight-bold bg-pri text-white" id="footer">
     <div class="container py-5 text-center">
-        <p>Copyright &copy; <span id="currentYear"></span> by AeroFleetOne.
+        <p>Copyright &copy;
+            <span id="currentYear"></span>
+            by AeroFleetOne.
         </p>
     </div>
 </div>
