--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,12 +1,12 @@
 <!-- assign variable to invalidate cache upon each new build -->
 {% assign cache_buster = site.time | date: '%s%N' %}
 
-<nav class="navbar navbar-expand-md fixed-top">
+<nav class="navbar navbar-expand-lg fixed-top">
     <a class="navbar-brand smooth-scroll" href="#top">
         <img class="my-navbar-img" src="{{'/assets/img/Aero-Fleet-One-logo.png' | relative_url }}?{{cache_buster}}" alt="{{site.title}}">
     </a>
 
-    <button aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler hamburger hamburger--spring d-md-none" data-target="#navbarNav" data-toggle="collapse" type="button">
+    <button aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler hamburger hamburger--spring d-lg-none" data-target="#navbarNav" data-toggle="collapse" type="button">
         <span class="hamburger-box">
             <span class="hamburger-inner"></span>
         </span>
