--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -5,21 +5,22 @@
     <a class="navbar-brand smooth-scroll" href="#top">
         <img class="my-navbar-img" src="{{'/assets/img/Aero-Fleet-One-logo.png' | relative_url }}?{{cache_buster}}" alt="{{site.title}}">
     </a>
+    {% unless page.url contains "news"  %}
+        <button aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler hamburger hamburger--spring d-lg-none" data-target="#navbarNav" data-toggle="collapse" type="button">
+            <span class="hamburger-box">
+                <span class="hamburger-inner"></span>
+            </span>
+        </button>
 
-    <button aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler hamburger hamburger--spring d-lg-none" data-target="#navbarNav" data-toggle="collapse" type="button">
-        <span class="hamburger-box">
-            <span class="hamburger-inner"></span>
-        </span>
-    </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ml-auto mr-2">
 
-    <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav ml-auto mr-2">
-
-            {% for i in site.data.navigation.items %}
-                <li class="nav-item underline ml-2">
-                    <a class="nav-link smooth-scroll" href="{{i.url}}">{{i.name}}</a>
-                </li>
-            {% endfor %}
-        </ul>
-    </div>
+                {% for i in site.data.navigation.items %}
+                    <li class="nav-item underline ml-2">
+                        <a class="nav-link smooth-scroll" href="{{i.url}}">{{i.name}}</a>
+                    </li>
+                {% endfor %}
+            </ul>
+        </div>
+    {% endunless %}
 </nav>
