--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -7,6 +7,7 @@
             <span id="currentYear"></span>
             by AeroFleetOne.
         </p>
+        <p class="mt-3">{% include privacy.html %}</p>
     </div>
 </div>
 
