--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -15,3 +15,10 @@
 <script type="text/javascript" src="{{'/assets/js/bootstrap.min.js' | relative_url}}?{{cache_buster}}" async></script>
 <script type="text/javascript" src="{{'/assets/js/ekko-lightbox.min.js' | relative_url}}?{{cache_buster}}" async></script>
 <script type="text/javascript" src="{{'/assets/js/myscript.js' | relative_url}}?{{cache_buster}}" async></script>
+
+<script>
+    $(document).on('click', '[data-toggle="lightbox"]', function(event) {
+        event.preventDefault();
+        $(this).ekkoLightbox();
+    });
+</script>
