Implement basic mapbox plugin, split up tet on team site, change calendly widget to destiny

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -142,8 +142,7 @@ $theme-font: "Lato", Helvetica, sans-serif;
   text-decoration: none;
 }
 
-@import "bootstrap";
 
+@import "bootstrap";
 @import "hamburger";
-@import "flipcard";
-@import "lightbox";
+@import "map";
