--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,9 +1,21 @@
 <nav class="navbar navbar-expand-lg fixed-top bg-white">
     <a class="navbar-brand" href="/">
-        <img class="ms-3 p-2 my-navbar-img" src="{{'/assets/img/Aero-Fleet-One-logo.png' | relative_url }}?{{cache_buster}}" alt="{{site.title}}">
+        <img
+            class="ms-3 my-navbar-img"
+            src="{{'/assets/img/Aero-Fleet-One-logo.png' | relative_url }}?{{cache_buster}}"
+            alt="{{site.title}}"
+        />
     </a>
 
-    <button aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler hamburger hamburger--spring d-lg-none" data-bs-target="#navbarNav" data-bs-toggle="collapse" type="button">
+    <button
+        aria-controls="navbarNav"
+        aria-expanded="false"
+        aria-label="Toggle navigation"
+        class="navbar-toggler hamburger hamburger--spring d-lg-none"
+        data-bs-target="#navbarNav"
+        data-bs-toggle="collapse"
+        type="button"
+    >
         <span class="hamburger-box">
             <span class="hamburger-inner"></span>
         </span>
@@ -12,9 +24,14 @@
     <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ms-auto me-4 fs-5">
             {% for i in site.data.general.items.navigation.items %}
-                <li class="nav-item ml-lg-2">
-                    <a class="nav-link fw-bold px-3 {% if forloop.last %} ms-2 fs-5 btn btn-primary mb-4{% endif %}" href="{{i.url}}">{{i.name}}</a>
-                </li>
+            <li class="nav-item ml-lg-2">
+                <a
+                    class="nav-link fw-bold px-3 {% if forloop.last %} ms-2 fs-5 btn btn-primary mb-4 d-inline{% endif %}"
+                    href="{{i.url}}"
+                >
+                    {{i.name}}
+                </a>
+            </li>
             {% endfor %}
         </ul>
     </div>
