--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -16,8 +16,8 @@ $theme-font: "Lato", Helvetica, sans-serif;
 #bgvid {
   object-fit: cover;
   width: 100vw;
-  height: 60vh;
-  top: 0;
+  height: 65vh;
+  top: 100px;
   left: 0;
   position: absolute;
 }
