Change text overlay on video

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -25,9 +25,8 @@ $theme-font: "Lato", Helvetica, sans-serif;
 .video-header {
   position: relative;
   height: 60vh;
-  text-align: center;
+  text-align: left;
   display: flex;
-  align-items: center;
   justify-content: center;
   flex-direction: column;
   color: white;
