--- a/_layouts/news.html
+++ b/_layouts/news.html
@@ -1,13 +1,14 @@
 ---
 layout: base
 ---
-<div class="bg-light" style="margin-top: 8rem;">
+
+<div class="bg-light" style="margin-top: 8rem">
     <div class="container py-5 my-5">
         <div class="col-md-8">
             <h1 class="py-5 my-5">{{page.title}}</h1>
             {% if page.img %}
-                <img src="{{page.img}}" alt="{{post.title}}" class="img-fluid">
-                <p>{{page.subtitle}}</p>
+            <img src="{{page.img}}" alt="{{post.title}}" class="img-fluid" />
+            <p>{{page.subtitle}}</p>
             {% endif %}
         </div>
     </div>
@@ -16,11 +17,17 @@ layout: base
 <div class="container py-5 my-5">
     <div class="row">
         <div class="col-md-8">
-            {{content}}
-            {% if page.article %}
-                <a href="{{page.article}}" class="btn st-btn" rel="noopener" target="_blank">Read Full Article</a>
+            {{content}} {% if page.article %}
+            <a
+                href="{{page.article}}"
+                class="btn st-btn"
+                rel="noopener"
+                target="_blank"
+            >
+                Read Full Article
+            </a>
             {% endif %}
         </div>
     </div>
-    <a class="btn st-btn mt-5" href="/">Back to Home</a>
+    <a class="btn st-btn mt-5" href="/media/">Back to Media</a>
 </div>
