--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -18,5 +18,5 @@ layout: base
     <div class="row">
         <div class="col-md-8">{{content}}</div>
     </div>
-    <a class="btn btn-primary mt-5" href="/blog/">Back to Blog</a>
+    <a class="btn btn-primary mt-5" href="/blog/">All Posts</a>
 </div>
