--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,8 +1,8 @@
 <nav class="navbar navbar-expand-lg fixed-top bg-white">
     <a class="navbar-brand" href="/">
         <img
-            class="ms-5 mt-2"
-            width="200px"
+            class="ms-2 ms-sm-5 mt-2"
+            width="150px"
             src="{{'/assets/img/Aero-Fleet-One-logo.png' | relative_url }}?{{cache_buster}}"
             alt="{{site.title}}"
         />
@@ -27,7 +27,7 @@
             {% for i in site.data.general.items.navigation %}
             <li class="nav-item ml-lg-2">
                 <a
-                    class="nav-link px-3 {% if forloop.last %}ms-2 fs-5 btn btn-primary mb-4 d-inline{% endif %} {% if forloop.first and page.url == '/' %} active{% endif %}{% unless forloop.first %}{% unless forloop.last %}{% if page.url contains i.url %} active{% endif %}{% endunless %}{% endunless %}"
+                    class="nav-link px-3 fs-5 fw-semibold {% if forloop.last %}ms-2 btn btn-primary mb-4 d-inline{% endif %} {% if forloop.first and page.url == '/' %} active{% endif %}{% unless forloop.first %}{% unless forloop.last %}{% if page.url contains i.url %} active{% endif %}{% endunless %}{% endunless %}"
                     href="/{{i.url}}{% unless forloop.first %}/{% endunless %}"
                 >
                     {{i.name|upcase}}
