--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -6,11 +6,45 @@
     id="footer"
     style="min-height: 20vh"
 >
-    <div class="container py-5 text-center">
+    <div class="container py-5 mb-5 text-center">
         <p class="mb-4">
             {% for i in site.data.general.items.navigation %}
             <a
-                class="mx-3 fs-6 fw-semibold text-decoration-none {% if forloop.first and page.url == '/' %} active{% endif %}{% unless forloop.first %}{% unless forloop.last %}{% if page.url contains i.url %} active{% endif %}{% endunless %}{% endunless %}"
+                class="
+                    mx-3
+                    fs-6
+                    fw-semibold
+                    text-decoration-none
+                    {%
+                    if
+                    forloop.first
+                    and
+                    page.url
+                    ==
+                    '/'
+                    %}
+                    active{%
+                    endif
+                    %}{%
+                    unless
+                    forloop.first
+                    %}{%
+                    unless
+                    forloop.last
+                    %}{%
+                    if
+                    page.url
+                    contains
+                    i.url
+                    %}
+                    active{%
+                    endif
+                    %}{%
+                    endunless
+                    %}{%
+                    endunless
+                    %}
+                "
                 href="/{{i.url}}{% unless forloop.first %}/{% endunless %}"
             >
                 {{i.name|upcase}}
@@ -33,6 +67,27 @@
         <p class="mt-3">{% include privacy.html %}</p>
     </div>
 </div>
+
+{% unless page.url contains 'connect' %}
+<div
+    class="
+        bg-primary
+        fixed-bottom
+        d-lg-none d-flex
+        justify-content-center
+        align-items-center
+        p-3
+        mt-3
+    "
+>
+    <a
+        href="/connect/"
+        class="strechted-link fs-1 text-decoration-none fw-bold text-white"
+    >
+        Connect
+    </a>
+</div>
+{% endunless %}
 
 <script
     src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
