--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -99,11 +99,23 @@
     src="{{'/assets/js/main.js' | relative_url}}?{{cache_buster}}"
     async
 ></script>
-{% if page.parallax %}
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+{% if page.parallax or page.curator %}
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+{% endif %} {% if page.parallax %}
 <script
     type="text/javascript"
     src="{{'/assets/js/parallax.js' | relative_url}}?{{cache_buster}}"
     async
 ></script>
+{% endif %} {% if page.curator %}
+<script
+    type="text/javascript"
+    src="//cdn.curator.io/1.3/js/curator.nodep.js"
+></script>
+<script type="text/javascript">
+    var widget = new Curator.Waterfall({
+        container: "#curator-feed",
+        feedId: "13547d70-cd6d-4a35-a106-e563a54da896",
+    });
+</script>
 {% endif %}
