--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -1,12 +1,14 @@
 ---
---- 
+---
 
 $primary: #136bc2;
 $secondary: blue;
 @import "bootstrap";
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;800&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;800&display=swap");
 
-* {font-family: 'Montserrat', sans-serif;}
+* {
+    font-family: "Montserrat", sans-serif;
+}
 
 h1 {
     font-weight: 800;
@@ -25,7 +27,7 @@ p {
 a {
     color: #474747;
     &:hover {
-        color:#464646;
+        color: #464646;
     }
 }
 
@@ -49,10 +51,10 @@ a {
 
 #messageCol {
     min-height: 300px;
-    @media (min-width: 576px)  { min-height: 600px }
-    
+    @media (min-width: 576px) {
+        min-height: 600px;
+    }
 }
-    
 
 @import "navbar";
 @import "hamburger";
