--- a/_includes/head.html
+++ b/_includes/head.html
@@ -70,4 +70,5 @@
         rel="stylesheet"
         href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css"
     />
+    <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
 </head>
