--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -110,7 +110,7 @@
 <script>
     if (window.netlifyIdentity) {
         window.netlifyIdentity.on("init", (user) => {
-            if (!user) {
+            if (user) {
                 window.netlifyIdentity.on("login", () => {
                     document.location.href = "/admin/";
                 });
