Fix contact  form labels

--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -32,7 +32,7 @@
         required
     />
 
-    <label for="inputEmail" class="form-label mt-3 mb-0 fw-semibold">
+    <label for="inputFName" class="form-label mt-3 mb-0 fw-semibold">
         First Name
         <sup>*</sup>
     </label>
@@ -44,7 +44,7 @@
         required
     />
 
-    <label for="inputEmail" class="form-label mt-3 mb-0 fw-semibold">
+    <label for="inputLName" class="form-label mt-3 mb-0 fw-semibold">
         Last Name
         <sup>*</sup>
     </label>
@@ -56,7 +56,7 @@
         required
     />
 
-    <label for="inputEmail" class="form-label mt-3 mb-0 fw-semibold">
+    <label for="inputMessage" class="form-label mt-3 mb-0 fw-semibold">
         Message
         <sup>*</sup>
     </label>
